syntax = "proto3";

option csharp_namespace = "Learnix.Commons.Contracts.Users.Protos";

package Learnix.Commons.Contracts;

service UserPermissionsService{
	rpc GetUserPermissions(GetUserPermissionsRequest) returns (GetUserPermissionsResponse){}
}

message GetUserPermissionsRequest{
	string identity_id = 1;
}

message GetUserPermissionsResponse{
	string user_id = 1;
	repeated string permissions = 2;
}